<resources>
    <string name="app_name">Mamíferos de España</string>
    <string name="action_settings">Ajustes</string>
    <string name="title_activity_animals_list"></string>
    <string name="title_activity_dichotomous_key">Clave dicotómica</string>

    <!-- MENU -->
    <string name="txtMenuHome">Inicio</string>
    <string name="txtMenuCamera">Cámara</string>
    <string name="txtMenuAbout">Créditos</string>
    <string name="txtMenuMaps">Mapa de huellas</string>
    <string name="txtListMenu">Guía de mamíferos</string>
    <string name="txtDichotomousMenu">Identificación de huellas</string>
    <string name="txtMenuBackground">Guía para la identificación de huellas y rastros de mamíferos de España.</string>


    <!-- ANIMAL LIST -->
    <!--<string name="title_activity_camera2">Cámara</string>-->
    <string name="search">Buscar…</string>

    <!-- ANIMAL DATA ACTIVITY falta implementar-ho-->
    <string name="txtIndexDescription">Descripción</string>
    <string name="txtIndexHabitat">Hábitat</string>
    <string name="txtIndexDistribution">Distribución</string>
    <string name="txtIndexTrace">Rastros</string>

    <!-- DICHOTOMOUS KEY ACTIVITY-->
    <!-- RIGTH BUTTON-->
    <string name="hoof">Pezuña/Casco</string>
    <string name="pair_fingers">Dedos par</string>
    <string name="no_secundary_hoof">Sin pezuña secundaria</string>
    <string name="with_nails">Con uñas</string>
    <string name="double_pad">Almohadilla bilobulada</string>
    <string name="no_main_pad">Sin almohadilla principal</string>
    <string name="heavily_modified">Muy modificada</string>
    <string name="divided_pad">Almohadilla principal dividida</string>
    <string name="one_to_five_size">entre 1 y 5 cm</string>
    <string name="more_than_threecm">Más de 3 cm</string>
    <string name="long_nails">Uñas largas</string>
    <string name="less_than_threecm">Menos de 3 cm</string>
    <string name="more_than_onefivecm">Más de 1,5 cm</string>
    <string name="mole">Huella con hilera</string>
    <string name="side_fingers">Dedos laterales</string>
    <string name="digitigrade">Huella digitígrada</string>

    <!-- LEFT BUTTON-->
    <string name="fingers">Dedos</string>
    <string name="no_nails">Sin uñas</string>
    <string name="tripe_pad">Almohadilla trilobulada</string>
    <string name="odd_fingers">Dedos impares</string>
    <string name="with_secundary_hoof">Con pezuña secundaria</string>
    <string name="with_main_pad">Con almohadilla principal</string>
    <string name="unique_main_pad">Almohadilla principal unica</string>
    <string name="five_to_eigth_cm">Entre 5 y 8 cm</string>
    <string name="small_nails">Uñas pequeñas</string>
    <string name="one_to_three_cm">Entre 1 y 3 cm</string>
    <string name="four_to_five_cm">Entre 4 y 5 cm</string>
    <string name="less_than_onefive_cm">Menos de 1,5cm</string>
    <string name="five_fingers">5 dedos</string>
    <string name="front_fingers">Dedos hacia delante</string>
    <string name="oval_pad">Almohadilla ovalada</string>
    <string name="plantigrade">Huella plantigrada</string>

    <!-- ABOUT ACTIVITY -->
    <string name="title_activity_about">Créditos</string>
    <string name="direction_title">Desarrollo, edición de contenidos y edición gráfica.</string>
    <string name="photos_title">Fotografías.</string>
    <string name="maps_title">Mapas de distribución.</string>
    <string name="maps_text">
        <a href="https://www.miteco.gob.es/es/biodiversidad/temas/inventarios-nacionales/">Ministerio para la Trancisión Ecológica y el Reto Demográfico.</a>
    </string>
    <string name="copyrigth_text">
        <a href="https://creativecommons.org/licenses/by/4.0/">Derechos reservados.</a>
    </string>

    <!-- MAPS ACTIVITY -->
    <string name="title_dialog">Guardar huella</string>
    <string name="ok_dialog">Aceptar</string>
    <string name="cancel_dialog">Cancelar</string>
    <string name="spinerselection_dialog">Selecciona un animal…</string>
    <string name="btn_save_coordinate">Guardar huella</string>
    <string name="salir_sesion">Salir sesión</string>
    <string name="check_boxmis_huellas">Mis huellas</string>
    <string name="set_visible">Desea que su marca sea visible para otros usuarios?</string>
    <string name="esta_seguro">¿Esta seguro?</string>
    <string name="yes">Sí</string>

    <string name="title_activity_maps_layout" />
    <string name="title_activity_camera2" />
    <string name="title_activity_animal_data" />

    <!-- ERRORS -->
    <string name="error_bd">ERROR. No se ha podido cargar la base de datos.</string>
    <string name="camera_perm">Atención!!! Para utilizar la camara se necesita aceptar los permisos.</string>
    <string name="confi_change">Cambio de configuración.</string>
    <string name="save_picture">Guardado:</string>
    <string name="error_connection">Error en la connexión.</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>
