<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.petjadesapp.MainActivity">
    <item
        android:id="@+id/inici"
        android:orderInCategory="100"
        android:title="@string/txtMenuHome"
        app:showAsAction="never" />
    <item
        android:id="@+id/animalList"
        android:orderInCategory="100"
        android:title="@string/txtListMenu"
        app:showAsAction="never" />
    <item
        android:id="@+id/dichotomous"
        android:orderInCategory="100"
        android:title="@string/txtDichotomousMenu"
        app:showAsAction="never" />
    <item
        android:id="@+id/camera"
        android:orderInCategory="100"
        android:title="@string/txtMenuCamera"
        app:showAsAction="never" />
    <item
        android:id="@+id/maps"
        android:orderInCategory="100"
        android:title="@string/txtMenuMaps"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="@string/txtMenuAbout"
        app:showAsAction="never" />

</menu>
