<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Animal:" />

    <Spinner
        android:id="@+id/spAnimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_visible" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbYes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/yes" />

        <RadioButton
            android:id="@+id/rbNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="No" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:text="@string/esta_seguro" />

</LinearLayout>